# s

./: .dockerignore  CMakeLists.txt
.github/workflows/: CI.yml
cmake/packaging/: common.cmake  windows.cmake
src/: entry_handler.cpp
src/platform/: common.h
src/platform/windows/: windows.rs.in
src_assets/windows/misc/autostart/: autostart-service.bat
src_assets/windows/misc/service/: install-service.bat  uninstall-service.bat
tools/: CMakeLists.txt  sunshinesvc.cpp
